# gameoflife

./: CMakeLists.txt  README.md  gameoflife.c  generation.c  generation.h  makefile
